# StarLightTeaHouseBot

./: .env  Dockerfile  EditQuotes.py  LLM.py  README.md  README_zh.md  bottoken  docker-compose.yml  docker_requirements.txt  download_jm_pdf.py  jm_dl_option.yml  main.py  pyproject.toml  requirement.txt  requirements.txt
config/: foodlist.txt  jm_dl_option.yml
docker/: Dockerfile  docker-compose.yml
image_search/: Cargo.toml
image_search/src/: headers.rs  lib.rs  saucenao.rs  test.rs
modules/: backdoor.py  inline.py  jm.py  replies.py  start.py  stickers.py
modules/GroupWelcome/: captcha.py  notify_admin.py  welcome_messages.py
modules/LLM/: chat.py  fetch_LLM.py
tools/: edit_quotes.py
