[package]
name = "image_search"
version = "0.1.0"
edition = "2024"

[lib]
name = "image_search"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.23", features = ["multipart", "stream", "json"] }
serde_json = "1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
pyo3 = "0.20.0"
pyo3-asyncio = "0.20.0"